--- a/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_001/Lecture_001.ipynb
+++ b/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_001/Lecture_001.ipynb
@@ -6,6 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing libraries for workflow\n",
+    "#Importer des bibliotheques pour le flux de travail\n",
+    "#Импорт библиотек для работы\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -16,6 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Loading data frame into sp (Students Performance)\n",
+    "#Chargement de la trame de donnees dans sp\n",
+    "#Загрузка данных в переменную sp\n",
+    "\n",
     "sp = pd.read_csv('C:/Users/ei_vorobev/Desktop/KC/StudentsPerformance.csv')"
    ]
   },
@@ -202,6 +210,10 @@
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "sp.head(10)"
    ]
   },
@@ -453,6 +465,10 @@
     }
    ],
    "source": [
+    "#Show the last 15 lines\n",
+    "#Afficher les 15 dernieres lignes\n",
+    "#Показать 15 последних строк\n",
+    "\n",
     "sp.tail(15)"
    ]
   },
@@ -558,6 +574,10 @@
     }
    ],
    "source": [
+    "#Descripting numeric data\n",
+    "#Description des donnees numeriques\n",
+    "#Описание числовых данных\n",
+    "\n",
     "sp.describe()"
    ]
   },
@@ -586,6 +606,10 @@
     }
    ],
    "source": [
+    "#Descripting data types\n",
+    "#Description des types de donnees\n",
+    "#Описание типов данных\n",
+    "\n",
     "sp.dtypes"
    ]
   },
@@ -606,6 +630,10 @@
     }
    ],
    "source": [
+    "#Data frame size\n",
+    "#Taille de la trame de donnees\n",
+    "#Размер датафрейма\n",
+    "\n",
     "sp.shape"
    ]
   },
@@ -668,6 +696,10 @@
     }
    ],
    "source": [
+    "#Calculating mean writing score in each gender group\n",
+    "#Calculation le score moyen d'ecriture dans chaque groupe de genre\n",
+    "#Рассчет среднего результата по письменному заданию в каждой гендерной группе\n",
+    "\n",
     "sp.groupby('gender').aggregate({'writing score' : 'mean'})"
    ]
   },
@@ -688,6 +720,10 @@
     }
    ],
    "source": [
+    "#Number of attributes\n",
+    "#Nombre d'attributs\n",
+    "#Количество атрибутов\n",
+    "\n",
     "sp.size"
    ]
   },
@@ -771,6 +807,10 @@
     }
    ],
    "source": [
+    "#Selecting the attributes of the 3 first rows and the first 5 columns\n",
+    "#Selection des attributs des 3 premieres lignes et des 5 premieres colonnes\n",
+    "#Выбор атрибутов первых 3 строк и первых 5 столбцов\n",
+    "\n",
     "sp.iloc[0:3, 0:5]"
    ]
   },
@@ -841,7 +881,11 @@
     }
    ],
    "source": [
-    "sp.iloc[[2, 5, 9], [3, 6, -2]]"
+    "#Selecting the attributes of 3,6,10 rows and 4,6, second from the end of colomns\n",
+    "#Selection des attributs des 3,6,10 lignes et 4,6, deuxxieme a partir de la fin des colonnes\n",
+    "#Выбор атрибутов 3,6,10 строк и 4,6 и второго с конца столбцов\n",
+    "\n",
+    "sp.iloc[[2, 5, 9], [3, 5, -2]]"
    ]
   },
   {
@@ -850,6 +894,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating a new data frame\n",
+    "#Creation une nouveau trame de donnees\n",
+    "#Создание нового датафрейма\n",
+    "\n",
     "sp_with_names=sp.iloc[[1,3,6,9,12]]"
    ]
   },
