--- a/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_001/Lecture_001.ipynb
+++ b/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_001/Lecture_001.ipynb
@@ -16,20 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Loading data frame into sp (Students Performance)\n",
-    "#Chargement de la trame de donnees dans sp\n",
+    "#Chargement de la dataframe dans sp\n",
     "#Загрузка данных в переменную sp\n",
     "\n",
-    "sp = pd.read_csv('C:/Users/ei_vorobev/Desktop/KC/StudentsPerformance.csv')"
+    "sp = pd.read_csv('C:/Users/9/Downloads/StudentsPerformance.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "9                    none          38             60             50  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "999                    none          77             86             86  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "max     100.00000     100.000000     100.000000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -624,14 +624,14 @@
        "(1000, 8)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Data frame size\n",
-    "#Taille de la trame de donnees\n",
+    "#Dataframe size\n",
+    "#Taille de la dataframe\n",
     "#Размер датафрейма\n",
     "\n",
     "sp.shape"
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
        "male        63.311203"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "8000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "2                    none  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>lunch</th>\n",
-       "      <th>reading score</th>\n",
+       "      <th>math score</th>\n",
        "      <th>reading score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -849,19 +849,19 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>standard</td>\n",
-       "      <td>95</td>\n",
+       "      <td>90</td>\n",
        "      <td>95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>standard</td>\n",
-       "      <td>83</td>\n",
+       "      <td>71</td>\n",
        "      <td>83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>free/reduced</td>\n",
-       "      <td>60</td>\n",
+       "      <td>38</td>\n",
        "      <td>60</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -869,13 +869,13 @@
        "</div>"
       ],
       "text/plain": [
-       "          lunch  reading score  reading score\n",
-       "2      standard             95             95\n",
-       "5      standard             83             83\n",
-       "9  free/reduced             60             60"
+       "          lunch  math score  reading score\n",
+       "2      standard          90             95\n",
+       "5      standard          71             83\n",
+       "9  free/reduced          38             60"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,12 +890,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Creating a new data frame\n",
-    "#Creation une nouveau trame de donnees\n",
+    "#Creating a new dataframe\n",
+    "#Creation une nouveau dataframe\n",
     "#Создание нового датафрейма\n",
     "\n",
     "sp_with_names=sp.iloc[[1,3,6,9,12]]"
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1013,27 +1013,35 @@
        "12                    none          65             81             73  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Dataframe view\n",
+    "#Vue Dataframe\n",
+    "#Представление датафрейма\n",
+    "\n",
     "sp_with_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Replacing indexes to names\n",
+    "#Remplacement des index par des noms\n",
+    "#Замена индексов на имена\n",
+    "\n",
     "sp_with_names.index = ['Jack Sparrow', 'Luke Skywalker', 'Iron Man', 'Shrek', 'Jon Snow']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1150,18 +1158,22 @@
        "Jon Snow                   81             73  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Dataframe view\n",
+    "#Vue Dataframe\n",
+    "#Представление датафрейма\n",
+    "\n",
     "sp_with_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1213,18 +1225,22 @@
        "Iron Man      female          88             95"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Selecting attributes for Jack Sparrow and Iron Man in columns gender, math score, reading score\n",
+    "#Selection des attributs pour Jack Sparrow et Iron Man dans les colonnes genre, score en mathematique, score en lecture\n",
+    "#Выбор атрибутов для Jack Sparrow и Iron Man в колонках гендер, оценка по математике, оценка по чтению\n",
+    "\n",
     "sp_with_names.loc[['Jack Sparrow', 'Iron Man'], ['gender', 'math score', 'reading score']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1238,18 +1254,22 @@
        "Name: gender, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Selecting a data series for the first column\n",
+    "#Selection d'une serie de donnees pour la premiere colonne\n",
+    "#Выбор серии данных по первой колонке\n",
+    "\n",
     "sp_with_names.iloc[:, 0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1258,28 +1278,36 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Data type confirmation \n",
+    "#Confirmation de type de donnees\n",
+    "#Подтверждение типа данных\n",
+    "\n",
     "type(sp_with_names.iloc[:, 0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating two series\n",
+    "#Creation deux series\n",
+    "#Создание двух серий\n",
+    "\n",
     "first_series=pd.Series([1, 2, 3], index = ['Jack Sparrow', 'Luke Skywalker', 'Iron Man'])\n",
     "second_series=pd.Series([4, 5, 6], index = ['Jack Sparrow', 'Luke Skywalker', 'Iron Man'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1334,18 +1362,22 @@
        "Iron Man                 3           6"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Creating a dataframe from two series\n",
+    "#Creation d'un dataframe a partir de deux series\n",
+    "#Создание датафрейма на основании двух серий\n",
+    "\n",
     "pd.DataFrame({'col_name_1': first_series, 'col_name_2': second_series})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1359,18 +1391,22 @@
        "Name: gender, dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Sample view of a series\n",
+    "#Exemple de vue d'une serie\n",
+    "#Пример представления серии\n",
+    "\n",
     "sp_with_names['gender']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1431,18 +1467,22 @@
        "Jon Snow        female"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Sample view of a dataframe\n",
+    "#Exemple de vue d'une dataframe\n",
+    "#Пример представления датафрейма\n",
+    "\n",
     "sp_with_names[['gender']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1451,18 +1491,22 @@
        "(5, 1)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Dataframe size\n",
+    "#Taille de la dataframe\n",
+    "#Размер датафрейма\n",
+    "\n",
     "sp_with_names[['gender']].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1471,35 +1515,18 @@
        "(5,)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Series size\n",
+    "#Taille de la serie\n",
+    "#Размер серии\n",
+    "\n",
     "sp_with_names['gender'].shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
