--- a/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_002/lecture_002.ipynb
+++ b/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_002/lecture_002.ipynb
@@ -6,6 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing libraries for workflow\n",
+    "#Importer des bibliotheques pour le flux de travail\n",
+    "#Импорт библиотек для работ\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -16,6 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Loading data frame into sp (Students Performance)\n",
+    "#Chargement de la dataframe dans sp\n",
+    "#Загрузка данных в переменную sp\n",
+    "\n",
     "sp=pd.read_csv('C:/Users/9/Downloads/StudentsPerformance.csv')"
    ]
   },
@@ -202,13 +210,19 @@
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "sp.head(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -233,6 +247,10 @@
     }
    ],
    "source": [
+    "#View of a series where the gender id female\n",
+    "#Vue d'une serie ou le genre est feminin\n",
+    "#Представление серии в которой пол - женский\n",
+    "\n",
     "sp.gender == 'female'"
    ]
   },
@@ -350,6 +368,10 @@
     }
    ],
    "source": [
+    "#Selecting attributes gender and writing score where the gender id female\n",
+    "#Selection des attibuts de genre et score d'ecriture ou le genre est feminin\n",
+    "#Выбор атрибутов гендер и оценка по письму, где гендер - женский\n",
+    "\n",
     "sp.loc[sp.gender == 'female', ['gender', 'writing score']]"
    ]
   },
@@ -359,6 +381,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating variable mean writing score\n",
+    "#Creation d'un score d'ecriture moyen variable\n",
+    "#Создание переменной средней оценки по письму\n",
+    "\n",
     "mean_sp_ws = sp['writing score'].mean()"
    ]
   },
@@ -561,6 +587,10 @@
     }
    ],
    "source": [
+    "#Selecting lines where writing score is above mean writing score\n",
+    "#Selectiom des lignes ou le score d'ecriture est superieur au score d'ecriture moyen\n",
+    "#Выбор строк в которой оценка по письму выше средней\n",
+    "\n",
     "sp.loc[sp['writing score'] > mean_sp_ws]"
    ]
   },
@@ -570,6 +600,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating a variable for a condition query\n",
+    "#Creation d'une variable pour une requete de condition\n",
+    "#Создание переменной для условия по запросу\n",
+    "\n",
     "query = (sp['writing score'] > mean_sp_ws) & (sp.gender == 'female')"
    ]
   },
@@ -756,6 +790,10 @@
     }
    ],
    "source": [
+    "#Show the first 10 lines that match the query\n",
+    "#Afficher les 10 premieres lignes correpsopdant a la requete\n",
+    "#Показать 10 первых строк удовлетворяющих условию\n",
+    "\n",
     "sp.loc[query].head(10)"
    ]
   },
@@ -765,6 +803,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Renaming columns\n",
+    "#Renommer les colonnes\n",
+    "#Переименование колонок\n",
+    "\n",
     "sp = sp \\\n",
     "    .rename(columns = \n",
     "           {'parental level of education': 'parental_level_of_education',\n",
@@ -958,6 +1000,10 @@
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "sp.head(10)"
    ]
   },
@@ -1160,6 +1206,10 @@
     }
    ],
    "source": [
+    "#Selecting lines where writing score is above 74\n",
+    "#Selectiom des lignes ou le score d'ecriture est superieur 74\n",
+    "#Выбор строк в которой оценка по письму выше 74\n",
+    "\n",
     "sp.query('writing_score > 74')"
    ]
   },
