--- a/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_002/lecture_002.ipynb
+++ b/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_002/lecture_002.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -241,7 +241,7 @@
        "Name: gender, Length: 1000, dtype: bool"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "[518 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
        "[512 rows x 8 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "27                    none          67             69             75  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
        "9                    none          38             60             50  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1200,7 @@
        "[350 rows x 8 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1390,27 +1390,35 @@
        "919               completed          91             96             91  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Selecting lines where reading score is above 90 and gender is male\n",
+    "#Selection des lignes ou le score de lecture est superieur 90 et genre est masculin\n",
+    "#Выбор строк в которой оценка по чтению выше 90 и гендер мужской\n",
+    "\n",
     "sp.query(\"gender == 'male' & reading_score > 90\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating a variable for a condition query\n",
+    "#Creation d'une variable pour une requete de condition\n",
+    "#Создание переменной для условия по запросу\n",
+    "\n",
     "reading_score_query = 95"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1832,27 +1840,35 @@
        "995               completed          88             99             95  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#View of query\n",
+    "#Vue de la requete\n",
+    "#Представление запроса\n",
+    "\n",
     "sp.query('reading_score > @reading_score_query')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating list\n",
+    "#Creation de liste\n",
+    "#Создание списка\n",
+    "\n",
     "sc = [i for i in list(sp) if 'score' in i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1861,18 +1877,22 @@
        "['math_score', 'reading_score', 'writing_score']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#View of list\n",
+    "#Vue de la liste\n",
+    "#Представление списка\n",
+    "\n",
     "sc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1980,18 +2000,22 @@
        "9          38             60             50"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Show the first 10 lines from list\n",
+    "#Afficher les 10 premieres lignes de la liste\n",
+    "#Показать 10 первых строк из списка\n",
+    "\n",
     "sp[sc].head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2109,18 +2133,22 @@
        "[1000 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Using the filter function\n",
+    "#Utilisation de la fonction de filter\n",
+    "#Использование функции фильтр\n",
+    "\n",
     "sp.filter(like='score')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2275,12 +2303,16 @@
        "[1000 rows x 5 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Using the filter function for columns\n",
+    "#Utilisation de la fonction de filter pour les colonnes\n",
+    "#Использование функции фильтр по столбцам\n",
+    "\n",
     "sp.filter(like='o', axis=1)"
    ]
   }
