--- a/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_003/Lecture_003.ipynb
+++ b/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_003/Lecture_003.ipynb
@@ -6,6 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing libraries for workflow\n",
+    "#Importer des bibliotheques pour le flux de travail\n",
+    "#Импорт библиотек для работ\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -16,6 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Loading data frame into sp (Students Performance)\n",
+    "#Chargement de la dataframe dans sp\n",
+    "#Загрузка данных в переменную sp\n",
+    "\n",
     "sp=pd.read_csv('C:/Users/9/Downloads/StudentsPerformance.csv')"
    ]
   },
@@ -202,6 +210,10 @@
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "sp.head(10)"
    ]
   },
@@ -211,6 +223,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Renaming columns\n",
+    "#Renommer les colonnes\n",
+    "#Переименование колонок\n",
+    "\n",
     "sp = sp \\\n",
     "    .rename(columns = \n",
     "           {'parental level of education': 'parental_level_of_education',\n",
@@ -404,6 +420,10 @@
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "sp.head(10)"
    ]
   },
@@ -474,12 +494,16 @@
     }
    ],
    "source": [
+    "#Grouping by gender with mean scores\n",
+    "#Groupement par genre avec des scores moyens\n",
+    "#Группировка по полу с указанием средних оценок\n",
+    "\n",
     "sp.groupby('gender').mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -598,12 +622,16 @@
        "9    male        group E           70.295775        76.746479"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Grouping by gender, race/ethnicity excluding indexes with mean reading score, mean math score. Renaming columns\n",
+    "#Groupement par genre, race/origine ethnique a l'exclusion des indices avec score moyen de lecture, score mathematique moyen. Renommer les colonnes\n",
+    "#Группировка по полу и расе/этничности без индексов с указанием средних оценок по математике и чтению. Переименование колонок.\n",
+    "\n",
     "sp.groupby(['gender', 'race/ethnicity'], as_index=False) \\\n",
     "    .aggregate({'reading_score': 'mean', 'math_score': 'mean'}) \\\n",
     "    .rename(columns = {'math_score': 'mean_math_score',\n",
@@ -612,10 +640,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Grouping by gender, race/ethnicity with mean reading score, mean math score. Renaming columns\n",
+    "#Groupement par genre, race/origine ethnique avec score moyen de lecture, score mathematique moyen. Renommer les colonnes\n",
+    "#Группировка по полу и расе/этничности с указанием средних оценок по математике и чтению. Переименование колонок.\n",
+    "\n",
     "mss=sp.groupby(['gender', 'race/ethnicity']) \\\n",
     "    .aggregate({'reading_score': 'mean', 'math_score': 'mean'}) \\\n",
     "    .rename(columns = {'math_score': 'mean_math_score',\n",
@@ -624,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -731,18 +763,22 @@
        "       group E                  70.295775        76.746479"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#View of result\n",
+    "#Vue du resultat\n",
+    "#Представление результата\n",
+    "\n",
     "mss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -761,18 +797,22 @@
        "           names=['gender', 'race/ethnicity'])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#View of indexes\n",
+    "#Vue des index\n",
+    "#Представление индексов\n",
+    "\n",
     "mss.index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -831,18 +871,22 @@
        "female group B                  71.076923        61.403846"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Selecting attributes for male/group C and female/group B\n",
+    "#Selection des attributs pour homme/groupe C et femme/groupe B\n",
+    "#Выбор атрибутов для мужчин/группа С и женщин/группа B\n",
+    "\n",
     "mss.loc[[('male', 'group C'), ('female', 'group B')]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -856,18 +900,22 @@
        "        97,  99,  31,  96,  24,  29,  40], dtype=int64)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#View unique values for reading score\n",
+    "#Vue les valeurs uniques pour le score de lecture\n",
+    "#Представление уникальных значений среди оценок по чтению\n",
+    "\n",
     "sp.reading_score.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -876,18 +924,22 @@
        "77"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Number unique values for writing score\n",
+    "#Nombre des valeurs uniques pour l'ecriture score\n",
+    "#Количество уникальных значений среди оценок по письму\n",
+    "\n",
     "sp.writing_score.nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -907,18 +959,22 @@
        "Name: reading_score, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Number unique values for reading score in each categories\n",
+    "#Nombre des valeurs uniques pour le score de lecture dans chaque categorie\n",
+    "#Количество уникальных значений среди оценок по чтению в каждой категории\n",
+    "\n",
     "sp.groupby(['gender', 'race/ethnicity']).reading_score.nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1109,18 +1165,22 @@
        "[1000 rows x 8 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Sorting descending by reading score and gender\n",
+    "#Tri decroissant par score de lecture et genre\n",
+    "#Сортировка по убыванию оценки по чтению и по полу\n",
+    "\n",
     "sp.sort_values(['gender', 'reading_score'], ascending = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1425,28 +1485,37 @@
        "886               completed          93            100             95  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Top-10 results. Sorting descending by reading score and gender\n",
+    "#Top-10 resultats. Tri decroissant par score de lecture et genre\n",
+    "#Топ-10 результатов. Сортировка по убыванию оценки по чтению и по полу\n",
+    "\n",
+    "\n",
     "sp.sort_values(['gender', 'reading_score'], ascending = False) \\\n",
     "    .groupby('gender').head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating new attribute\n",
+    "#Creation d'un nouvel attribut\n",
+    "#Cоздание нового атрибута\n",
+    "\n",
     "sp['total_score'] = sp.math_score + sp.reading_score + sp.writing_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1463,21 +1532,25 @@
        "997    195\n",
        "998    223\n",
        "999    249\n",
-       "Length: 1000, dtype: int64"
+       "Name: total_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_score"
+    "#View new attribute\n",
+    "#Vue du nouvel attribut\n",
+    "#Представление нового атрибута\n",
+    "\n",
+    "sp.total_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1675,18 +1748,22 @@
        "9          148  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "sp.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1706,27 +1783,35 @@
        "Name: total_score, Length: 1000, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Calculating the natural logarithm of the total score\n",
+    "#Calculation du logarithme naturel du score total\n",
+    "#Вычисление натурального логарифма суммарной оценки\n",
+    "\n",
     "np.log(sp.total_score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating new attribute\n",
+    "#Creation d'un nouvel attribut\n",
+    "#Cоздание нового атрибута\n",
+    "\n",
     "sp=sp.assign(total_score_log = np.log(sp.total_score))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1935,18 +2020,22 @@
        "9          148         4.997212  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Show the first 10 lines\n",
+    "#Afficher les 10 premieres lignes\n",
+    "#Показать 10 первых строк\n",
+    "\n",
     "sp.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2162,49 +2251,18 @@
        "[1000 rows x 9 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Removing total score\n",
+    "#decrassage du score total\n",
+    "#Удаление суммарной оценки\n",
+    "\n",
     "sp.drop(['total_score'], axis=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
