--- a/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_005/First Decision tree.ipynb
+++ b/Karpov_Courses_stepik.org/Introduction in DS and ML/Lectures/Lecture_005/First Decision tree.ipynb
@@ -6,11 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing libraries for workflow\n",
+    "#Importer des bibliotheques pour le flux de travail\n",
+    "#Импорт библиотек для работ\n",
+    "\n",
     "from sklearn import tree\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "import math as m"
    ]
   },
   {
@@ -19,6 +25,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Creating dataframe\n",
+    "#Creation de dataframe\n",
+    "#Создание датафрейма\n",
+    "\n",
     "data = pd.DataFrame({'X_1': [1, 1, 1, 0, 0, 0, 0, 1], 'X_2': [0, 0, 0, 1, 0, 0, 0, 1], 'Y': [1, 1, 1, 1, 0, 0, 0, 0]})"
    ]
   },
@@ -124,6 +134,10 @@
     }
    ],
    "source": [
+    "#View of dataframe\n",
+    "#Vue du dataframe\n",
+    "#Представление датафрейма\n",
+    "\n",
     "data"
    ]
   },
@@ -133,6 +147,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Choosing classifier\n",
+    "#Choisition le classificateur\n",
+    "#Выбор классификатора\n",
+    "\n",
     "clf = tree.DecisionTreeClassifier(criterion = 'entropy')"
    ]
   },
@@ -142,6 +160,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Choosing data\n",
+    "#Choisition des donnees\n",
+    "#Выбор данных\n",
+    "\n",
     "X = data[['X_1', 'X_2']]"
    ]
   },
@@ -151,6 +173,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Choosing data\n",
+    "#Choisition des donnees\n",
+    "#Выбор данных\n",
+    "\n",
     "y = data.Y"
    ]
   },
@@ -171,6 +197,10 @@
     }
    ],
    "source": [
+    "#Fitting the model\n",
+    "#Montage du model\n",
+    "#Обучение модели\n",
+    "\n",
     "clf.fit(X, y)"
    ]
   },
@@ -209,6 +239,10 @@
     }
    ],
    "source": [
+    "#Plotting decision tree\n",
+    "#Traction un arbre de decision\n",
+    "#Построение решающего дерева\n",
+    "\n",
     "tree.plot_tree(clf.fit(X, y))"
    ]
   },
@@ -218,6 +252,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Loading data frame into cats\n",
+    "#Chargement de la dataframe dans cats\n",
+    "#Загрузка данных в переменную cats\n",
+    "\n",
     "cats=pd.read_csv('C:/Users/9/Downloads/cats.csv')"
    ]
   },
@@ -361,6 +399,10 @@
     }
    ],
    "source": [
+    "#View of dataframe\n",
+    "#Vue du dataframe\n",
+    "#Представление датафрейма\n",
+    "\n",
     "cats"
    ]
   },
@@ -370,15 +412,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math as m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Formulas for calculating the entropy\n",
+    "#Formules de calculation de l'entropie\n",
+    "#Формулы для рассчет энтропии\n",
+    "\n",
     "E_sh_sob=(1/1)*m.log2((1/1)) - 0\n",
     "E_sh_kot=-(4/9)*m.log2((4/9)) - (5/9)*m.log2((5/9))\n",
     "E_gav_sob=0 - (5/5)*m.log2((5/5))\n",
@@ -389,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -398,13 +435,41 @@
        "0.0"
       ]
      },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculating the entropy\n",
+    "#Calculation de l'entropie\n",
+    "#Рассчет энтропии\n",
+    "\n",
+    "E_sh_sob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9910760598382222"
+      ]
+     },
      "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "E_sh_sob"
+    "#Calculating the entropy\n",
+    "#Calculation de l'entropie\n",
+    "#Рассчет энтропии\n",
+    "\n",
+    "E_sh_kot"
    ]
   },
   {
@@ -415,7 +480,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9910760598382222"
+       "0.0"
       ]
      },
      "execution_count": 14,
@@ -424,7 +489,11 @@
     }
    ],
    "source": [
-    "E_sh_kot"
+    "#Calculating the entropy\n",
+    "#Calculation de l'entropie\n",
+    "#Рассчет энтропии\n",
+    "\n",
+    "E_gav_sob"
    ]
   },
   {
@@ -435,7 +504,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "0.7219280948873623"
       ]
      },
      "execution_count": 15,
@@ -444,7 +513,11 @@
     }
    ],
    "source": [
-    "E_gav_sob"
+    "#Calculating the entropy\n",
+    "#Calculation de l'entropie\n",
+    "#Рассчет энтропии\n",
+    "\n",
+    "E_gav_kot"
    ]
   },
   {
@@ -455,7 +528,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7219280948873623"
+       "0.0"
       ]
      },
      "execution_count": 16,
@@ -464,7 +537,11 @@
     }
    ],
    "source": [
-    "E_gav_kot"
+    "#Calculating the entropy\n",
+    "#Calculation de l'entropie\n",
+    "#Рассчет энтропии\n",
+    "\n",
+    "E_laz_sob"
    ]
   },
   {
@@ -475,7 +552,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "-0.0"
       ]
      },
      "execution_count": 17,
@@ -484,49 +561,65 @@
     }
    ],
    "source": [
-    "E_laz_sob"
+    "#Calculating the entropy\n",
+    "#Calculation de l'entropie\n",
+    "#Рассчет энтропии\n",
+    "\n",
+    "E_laz_kot"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.0"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "E_laz_kot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
    "outputs": [],
    "source": [
+    "#Calculating the entropy\n",
+    "#Calculation de l'entropie\n",
+    "#Рассчет энтропии\n",
+    "\n",
     "E = -(4/10)*m.log2((4/10)) - (6/10)*m.log2((6/10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "#Formulas for calculating the information gain\n",
+    "#Formules de calculation du gain d'information\n",
+    "#Формулы для рассчет информационного выигрыша\n",
+    "\n",
     "IG_sh = E - (1/10)*E_sh_sob - (9/10)*E_sh_kot\n",
     "IG_gav = E - (5/10)*E_gav_sob - (5/10)*E_gav_kot\n",
     "IG_laz = E - (6/10)*E_laz_sob - (6/10)*E_laz_kot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07898214060026854"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Calculating the information gain\n",
+    "#Calculation du gain d'information\n",
+    "#Рассчет информационного выигрыша\n",
+    "\n",
+    "IG_sh"
    ]
   },
   {
@@ -537,7 +630,7 @@
     {
      "data": {
       "text/plain": [
-       "0.07898214060026854"
+       "0.6099865470109874"
       ]
      },
      "execution_count": 21,
@@ -546,7 +639,11 @@
     }
    ],
    "source": [
-    "IG_sh"
+    "#Calculating the information gain\n",
+    "#Calculation du gain d'information\n",
+    "#Рассчет информационного выигрыша\n",
+    "\n",
+    "IG_gav"
    ]
   },
   {
@@ -557,7 +654,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6099865470109874"
+       "0.9709505944546686"
       ]
      },
      "execution_count": 22,
@@ -566,49 +663,12 @@
     }
    ],
    "source": [
-    "IG_gav"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9709505944546686"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "#Calculating the information gain\n",
+    "#Calculation du gain d'information\n",
+    "#Рассчет информационного выигрыша\n",
+    "\n",
     "IG_laz"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
